objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Category__c</fullName>
        <description>CapEx Budget field.  used by Contract Management process</description>
        <label>Asset Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Item__c</fullName>
        <label>Budget Item</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Expense_Overhead__c</fullName>
        <description>CapEx Budget field.  used by Contract Management process</description>
        <label>Business Expense Overhead</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Cost__c</fullName>
        <description>CapEx Budget field.  used by Contract Management process</description>
        <label>Capital Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Clarity Department Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <formula>Department__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Clarity Department Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset__c</fullName>
        <description>CapEx Budget field.  used by Contract Management process</description>
        <label>Fixed Asset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_Sync__c</fullName>
        <inlineHelpText>Datestamp of last update from external data</inlineHelpText>
        <label>Last Update Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>CapEx Budget field.  used by Contract Management process</description>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All_Budgets</fullName>
        <columns>NAME</columns>
        <columns>Department_ID__c</columns>
        <columns>Department__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Account_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Budget_Item__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Budgets</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>B{0000000000}</displayFormat>
        <label>Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <recordTypes>
        <fullName>CapEx</fullName>
        <active>true</active>
        <description>Capital Expense Budgets</description>
        <label>CapEx</label>
    </recordTypes>
    <recordTypes>
        <fullName>OpEx</fullName>
        <active>true</active>
        <description>Operating Expense Budgets</description>
        <label>OpEx</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>